--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -419,7 +419,6 @@ footer .fa-handshake-angle {
 }
 .menu_item__description:hover + .confirmation {
   margin-right: -1rem;
-  transition: margin 600ms ease-out;
 }
 .menu_item__description:hover + .confirmation > .fa-circle-check {
   transition: transform 600ms ease-out;
@@ -436,6 +435,7 @@ footer .fa-handshake-angle {
   width: 3.75rem;
   height: 5.125rem;
   margin: -1.25rem -5rem -1.25rem 0;
+  transition: margin-right 0.6s ease-out;
 }
 .menu_item .fa-circle-check {
   transform: rotate(380deg);
