--- a/assets/scss/assets/pages/_menu.scss
+++ b/assets/scss/assets/pages/_menu.scss
@@ -123,7 +123,6 @@
         }
 
         &:hover + .confirmation > .fa-circle-check {
-            transition: transform 600ms ease-out;
             transform: rotate(0);
         }
     }
@@ -145,7 +144,8 @@
     }
 
     .fa-circle-check {
-        transform: rotate(380deg);
+        transition: transform .4s ease-in-out .35s;
+        transform: rotate(-180deg);
     }
 }
 
